// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VClickableList Default render. no list given 1`] = `
<div
  className="sc-AxjAm fOcHzp list_container "
>
  <div
    className="sc-AxirZ sc-AxiKw crVGut list_item "
    onClick={[Function]}
  >
    1
  </div>
  <div
    className="sc-AxirZ sc-AxhCb hWFKht list_item "
    onClick={[Function]}
  >
    2
  </div>
</div>
`;

exports[`VClickableList Rendering with props. Snapshot test 1`] = `
<div
  className="sc-AxjAm fOcHzp list_container "
>
  <div
    className="sc-AxirZ sc-AxiKw crVGut list_item "
    onClick={[Function]}
  >
    some_thing
  </div>
  <div
    className="sc-AxirZ jFyzcN list_item "
    onClick={[Function]}
  >
    some_name
  </div>
  <div
    className="sc-AxirZ jFyzcN list_item "
    onClick={[Function]}
  >
    some_name2
  </div>
  <div
    className="sc-AxirZ jFyzcN list_item "
    onClick={[Function]}
  >
    other name
  </div>
  <div
    className="sc-AxirZ sc-AxhCb hWFKht list_item "
    onClick={[Function]}
  >
    whatever list
  </div>
</div>
`;
